--- a/projects/productpreviewcard/css/styles.css
+++ b/projects/productpreviewcard/css/styles.css
@@ -48,6 +48,7 @@ body {
 }
 img {
     border-radius: 10px 0 0 10px;
+    display: block;
 }
 .attribution { 
     font-size: 11px; 
@@ -55,7 +56,7 @@ img {
 }
 .attribution a { color: hsl(228, 45%, 44%); }
 /* Utilities */
-.overline {
+.category {
     font-family: var(--ff-montserrat);
     font-weight: var(--fw-500);
     font-size: var(--fs-s);
@@ -107,7 +108,10 @@ img {
     height: 48px;
     text-align: center;
     margin-top: 30px;
-
+}
+.cart {
+    display: inline-block;
+    padding-right: 10px;
 }
 .btn:hover {
     cursor: pointer;
@@ -119,9 +123,6 @@ img {
     }
     img {
         border-radius: 10px 10px 0 0;
-    }
-    .desktop {
-        display: none;
     }
     .flex {
         max-width: calc(100vw - 32px);
@@ -137,8 +138,5 @@ img {
 @media (min-width: 601px) {
     .info {
         border-radius: 0 10px 10px 0;
-    }
-    .mobile {
-        display: none;
     }
 }
